
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2019 JUN 07a
  * in model/emfield/_Epotential*/emfield.c
    - got rid of UNSTEADYTERMS
  * in model/emfield/_emfield.h
    - added _phim1()
  * in model/share/emfield_share.c
    - fixed a bug: got rid of UNSTEADYTERMS as this wasn't set to TRUE as in emfield.c 


2019 MAY 26a
  * renamed
    - for_zone_ijk -> for_ijk
    - for_zone_kji -> for_kji
    - for_zone_kij -> for_kij
    - for_zone_jik -> for_jik


2019 MAY 25d
  * in README and USAGE
    - further changes


2019 MAY 25c
  * in README
    - further changes
    

2019 MAY 25b
  * in README
    - added description of the code and unique capabilities
  * in tools/indentwithwarpstyle.sh, made adjustment to the indent flags
  

2019 MAY 25a
  * renamed
    - for1DL -> for_1DL
    - for2DL -> for_2DL
    - for3DL -> for_3DL
  * in src/common.h
    - changed the macro for for_1DL, for_2DL, for_3DL: now, they should be accompanied
      by { and } and not by end1DL, end2DL, end3DL
  * in src/common.h
    - changed the macro for for_zone_*(): now sets k the ks in _2DL, and j to js in
      _1DL (were previously set to 0). This is important for the MPI subdomain 
      creation
  

2019 MAY 24a
  * in src/common.h
    - added macros for_zone_ijk(), for_zone_jik(), for_zone_kij(), for_zone_kji()
  * in various .c files
    - replaced for1DL() for2DL() for3DL() loops by a single for_zone_*() loop


2019 MAY 23b
  * in bin
    - updated ns_SDBD.wrp
  * in config/config.c
    - changed MAX_LINE_WIDTH from 90 to 70


2019 MAY 23a
  * in model/emfield
    - renamed _Ohm to _Epotential
    - renamed _Ohm_Generalized to _Epotential-Bfixed
  * in *.wrp files
    - renamed "Ohm(" to "Epotential("
    - renamed "OhmGeneralized(" to "EpotentialBfixed("
  * renamed