@@ -1,6 +1,8 @@
 // SPDX-License-Identifier: BSD-2-Clause
 /*
 Copyright 2001 Giovanni Fusina
+Copyright 2002 Timothy Hui
+
 
 Redistribution and use in source and binary forms, with or without modification, are
 permitted provided that the following conditions are met:
