@@ -1,6 +1,9 @@
 // SPDX-License-Identifier: BSD-2-Clause
 /*
 Copyright 1998-2018 Bernard Parent
+Copyright 2001 Jason Etele
+Copyright 2000 Giovanni Fusina
+
 
 Redistribution and use in source and binary forms, with or without modification, are
 permitted provided that the following conditions are met:
